# synesthesia

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/cymatics/: audio.rs  mod.rs  physics.rs  scene.rs
src/fluiddrum/: audio.rs  membrane.rs  mod.rs  scene.rs
src/gravity/: audio.rs  mod.rs  physics.rs  scene.rs
src/theremin/: audio.rs  camera.rs  mod.rs  scene.rs  tutorial.rs
